--- a/Actividad 2/estilos2.css
+++ b/Actividad 2/estilos2.css
@@ -1,21 +1,24 @@
-h1{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 35px;
-    color: rgb(7, 141, 3);
-
+/* Estilos para el encabezado h1 */
+h1 {
+    font-family: 'Times New Roman', Times, serif; /* Define la fuente del texto */
+    font-size: 35px; /* Tamaño de la fuente */
+    color: rgb(7, 141, 3); /* Color del texto en formato RGB (verde) */
 }
-.parrafo-principal{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 25px;
-    color: rgb(105, 104, 103);
+/* Estilos para el párrafo con la clase "parrafo-principal" */
+.parrafo-principal {
+    font-family: Georgia, 'Times New Roman', Times, serif; /* Define la fuente del texto */
+    font-size: 25px; /* Tamaño de la fuente */
+    color: rgb(105, 104, 103); /* Color del texto en tonos grises */
 }
-.imagen{
-    width: 300px;
-    height: 250px;
-    border-radius: 25%;
+/* Estilos para la imagen con la clase "imagen" */
+.imagen {
+    width: 300px; /* Define el ancho de la imagen en 300 píxeles */
+    height: 250px; /* Define la altura de la imagen en 250 píxeles */
+    border-radius: 25%; /* Aplica bordes redondeados con un 25% de radio */
 }
-.imagen2{
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
+/* Estilos para la imagen con la clase "imagen2" */
+.imagen2 {
+    width: 250px; /* Define el ancho de la imagen en 250 píxeles */
+    height: 250px; /* Define la altura de la imagen en 250 píxeles */
+    border-radius: 50%; /* Hace que la imagen sea completamente circular */
 }
